<resources>

    <!-- CREDENCIALES APLICATIVO -->
    <string name="app_name">Todo</string>

    <!-- LOGIN -->
    <string name="title_login">Login</string>
    <string name="sub_title_login">Please sign in to continue.</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="btn_login">LOGIN</string>

    <!-- TASK -->
    <string name="img_description_bg">Back ground</string>
    <string name="btn_log_out">Log Out</string>
    <string name="hint_create_todo">Create a new todo…</string>
    <string name="txt_list_empty">Your list is empty</string>
    <string name="txt_items_left">%1$s items left</string>
    <string name="btn_clear_completed">Clear completed</string>
    <!-- filters -->
    <string name="btn_all">All</string>
    <string name="btn_actived">Actived</string>
    <string name="btn_completed">Completed</string>

    <!-- TODO LIST -->
    <string name="img_description_check">Check button</string>
    <string name="img_description_shared">Shared button</string>
    <string name="img_description_delete">Delete button</string>

    <!-- MODAL -->
    <string name="txt_hello_share_todo">Hello %1$s share your todo</string>
    <string name="txt_enter_email">Enter the email of the user you want to share your todo with. Share a todo with someone and stay in sync with your goals everyday.</string>
    <string name="hint_enter_email">Enter your contact email</string>
    <string name="btn_share">Share</string>
    <string name="txt_participants">Participants:</string>

</resources>