<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_hello_share_todo"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTaskTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task del todo"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enterEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_enter_email"
        android:textSize="15sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtTaskTodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmailShared"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/rounded_exit_text"
        android:hint="@string/hint_enter_email"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/enterEmailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_share"
        android:textSize="17sp"
        android:textColor="@color/gray"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/etEmailShared"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_participants"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>